# looking-glass

./: History.md  ProjectHome.md  Tutorial.md
branches/v2.7/: CMakeLists.txt
branches/v2.7/src/lglass/: AppConfig.cpp  AppConfig.h  Console.h  DataFieldSettings.h  DataSet.cpp  DataSet.h  DataSetInfo.h  DataViewOptions.cpp  DockedTool.cpp  DockedTool.h  GeoDataView.h  LogWindow.h  NavigationView.h  PlotView.cpp  PlotView.h  PointSourceWindow.h  Preferences.cpp  ProgressWindow.cpp  RepositoryManager.cpp  TableView.cpp  ToolsetSetupWindow.h  Utils.cpp  Utils.h  VisualizationManagerBase.cpp  VtkDataManager.cpp
branches/v2.7/src/lglass/eval/: evaldefs.h
branches/v2.7/src/lglass/pq/: QtChartExport.h  QtWidgetsExport.h  pqChartValue.h  pqCollapsedGroup.h  pqColorChooserButton.cxx  pqColorMapColorChanger.h  pqColorMapModel.h
branches/v2.7/src/lglass/resources/: SplashBase.pdn  glacier_toolset.pdn  resources.qrc  sonde_toolset.pdn
branches/v2.7/src/lglass/ui/: ColorFunctionManagerDock.ui  DataViewOptionsDock.ui  GeoDataImagePanel.ui  LineToolDock.ui  PlotViewDock.ui  SliceViewerWindow.ui  TableView.ui
data/bonney/: bonney-8.csv  bonney-all-lowres-1m16x.ply
data/bonney/nav09-icepicks/: Dive05.txt  Dive06.txt  Dive07.txt  Dive09.txt  Dive10.txt  Dive11.txt  Dive12.txt  Dive13.txt  Dive14.txt  Dive15.txt  Dive17.txt  Dive18.txt  Dive19.txt  Dive20.txt  Dive21.txt  Dive22.txt  Dive23.txt  Dive24.txt  Dive25.txt  Dive26.txt  Dive27.txt
src/lglass/: AppConfig.cpp  CMakeLists.txt  ColorFunctionManager.cpp  ColorFunctionManager.h  Console.cpp  DataSet.cpp  DataSetInfo.cpp  DataViewOptions.cpp  DataViewOptions.h  GeoDataView.cpp  GeoDataView.h  LineTool.cpp  LineTool.h  LookingGlassSystem.h  Main.cpp  NavigationView.cpp  Plot.h  Preferences.h  PreferencesWindow.cpp  PreferencesWindow.h  RepositoryManager.cpp  SectionView.cpp  SliceViewer.cpp  SliceViewer.h  TableView.cpp  TableView.h  VisualizationManager.cpp  VisualizationManager.h
src/lglass/eval/: evalfunctions.h  evalwrap.c
src/lglass/pq/: pqChartPixelScale.cxx  pqCollapsedGroup.cxx  pqColorMapModel.cxx  pqColorMapWidget.cxx  pqPointMarker.cxx
src/lglass/resources/: resources.qrc
src/lglass/ui/: DataViewOptionsDock.ui  GeoDataImagePanel.ui  GeoDataPointsPanel.ui  GeoDataViewDock.ui  ProgressWindow.ui  SectionViewDock.ui  SetupToolset.ui
tags/v2.6.1/: CMakeLists.txt
tags/v2.6.1/src/lglass/: CMakeLists.txt  DataFieldSettings.cpp  DataSet.h  DataSetInfo.h  DataViewOptions.cpp  GlacierVisualizationManager.cpp  GlacierVisualizationManager.h  Main.cpp  PlotView.cpp  Preferences.cpp  VtkDataManager.cpp
tags/v2.6.1/src/lglass/pq/: pqChartPixelScale.h  pqColorMapColorChanger.cxx
tags/v2.6.1/src/lglass/ui/: DataFieldSettings.ui  GeoDataViewDock.ui  GlacierViewOptionsDock.ui  MainWindow.ui  NavigationViewDock.ui  PlotViewDock.ui
trunk/: HowToCompile.TXT
trunk/src/lglass/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  ColorFunctionManager.h  Console.h  DataSet.cpp  DataSet.h  DataSetInfo.cpp  GeoDataItem.cpp  GeoDataItem.h  GeoDataView.cpp  GeoDataView.h  GlacierViewOptions.cpp  GlacierViewOptions.h  LineTool.cpp  LogWindow.cpp  LookingGlassSystem.h  Main.cpp  NavigationView.cpp  Plot.cpp  PlotView.cpp  PlotView.h  PointSourceWindow.cpp  Preferences.cpp  Preferences.h  PreferencesWindow.cpp  ProgressWindow.h  RepositoryManager.cpp  RepositoryManager.h  SectionView.cpp  SectionView.h  SliceViewer.cpp  ToolsetSetupWindow.h  Utils.cpp  Utils.h  VisualizationManager.cpp  VisualizationManager.h  VisualizationManagerBase.cpp  VisualizationManagerBase.h  VtkDataManager.h
trunk/src/lglass/pq/: pqChartValue.cxx  pqColorChooserButton.h  pqColorMapWidget.h  pqPointMarker.h
trunk/src/lglass/resources/: resources.qrc
trunk/src/lglass/ui/: GeoDataImagePanel.ui  GeoDataMeshPanel.ui  GeoDataPointsPanel.ui  PointSourceDialog.ui  PreferencesWindow.ui
wiki/: History.wiki  Tutorial.wiki
